FEAT: Incorporate keywords into content for SEO

--- a/home/templates/home/about_us.html
+++ b/home/templates/home/about_us.html
@@ -22,11 +22,11 @@
                 who came into possession of a plot of land. 
             </p>
             <p class="text-content">
-                We wanted to rewild the site and plant the trees required to sequester 
+                We wanted to rewild the site and plant trees to sequester 
                 our own life's carbon, which we have been delighted to be able to do. 
                 On completion our own personal targets we felt so elated that we felt 
                 driven to provide the same opportunity to feel this elation to others, 
-                hence the creation of this wild carbon service.
+                hence the creation of this Wild Carbon service.
             </p>
             <p class="text-content">
                 We like nothing more to be able to provide you with the opportunity 
