--- a/home/templates/home/how_it_works.html
+++ b/home/templates/home/how_it_works.html
@@ -22,29 +22,29 @@
                 of around 1000 trees is a good target (see our facts section below for more information).
                 However, any trees that are planted will not only sequester carbon offsetting your 
                 carbon footprint but will also help to 'rewild' land that would otherwise be left in a 
-                cultivated state.
+                cultivated state
             </p>
             <p class="text-content">
                 What is 'rewilding', you might ask. Well, rewilding is the process of restoring an area 
                 of land to its natural state by reintroducing species of flora and fauna that have been 
-                driven out or removed. 
+                driven out or removed
             </p>
             <p class="text-content">
                 Your purchase of our carbon sequestration through rewilding service directly contributes 
                 to the reintroduction of native tree species that were removed from the site. Alongside 
-                the planting of trees, we do all we can to help improve the biodiversity of the site and
-                protect it forever.
+                the planting of trees, we do all we can to help improve biodiversity on the site and
+                protect it forever
             </p>
             <p class="text-content">
                 Profits from our service contribute to the ongoing protection of our currently owned 
                 location in the west of Ireland and, very soon, the purchase of additional suitable 
-                locations around the country of Ireland.
+                locations around the country of Ireland
             </p>
             <p class="text-content">
-                To ensure you feel safe putting your trust in us, we are externally audited and log 
+                To ensure you feel safe putting your trust in us, we are externally audited and record 
                 the planting of every tree planted at our location. On planting of your commissioned 
-                trees, you will receive a digital certificate detailing the trees planted on your 
-                behalf, via email.
+                trees, you will receive a digital certificate for each tree planted on your 
+                behalf, via email
             </p>
         </div>
     </div>
