--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,7 +20,7 @@
         <div class="inner-content-container">
             <h2 class="content-header">What we do</h2>
             <p class="text-content">
-                'Wild Carbon' is a company that can enable you to rewild your way 
+                'Wild Carbon' is a company that can enable you to rewild Ireland and work your way 
                 to a carbon neutral or even carbon negative life! 
 
                 We provide you with the opportunity to commission the growth and 
@@ -66,7 +66,7 @@
                 bog you are contributing to the reflooding and restoration of the bog. 
 
                 A cubic meter of blanket bog can release up to 385kg of CO2! By paying to preserve bog 
-                that would otherwise release carbon you could offset your life's carbon by sponsoring 
+                that would otherwise release carbon you could carbon offset your life by sponsoring 
                 just 37 meters squared of 2 meter deep blanket bog for €100!                
             </p>
         </div>
@@ -75,7 +75,7 @@
         <div class="inner-content-container">
             <h2 class="content-header">Newsletter</h2>
             <p class="text-content">
-                Sign up for our newsletter for more fun fact, useful hints on reducing your carbon 
+                Sign up for our newsletter for more fun facts, useful hints on reducing your carbon 
                 footprint and other news and events relating to Wild Carbon.           
             </p>
             <!-- Mailchimp HTML provided by Mailchimp https://mailchimp.com/ -->
