FEAT: Add references into template, view and form code

--- a/basket/templates/basket/checkout_buttons.html
+++ b/basket/templates/basket/checkout_buttons.html
@@ -1,3 +1,4 @@
+<!-- Template code provided by Code Institute -->
 <div class="button-container">
     <a href="{% url 'carbon_capture' %}" class="button button-content">
         <span class="icon">
