--- a/basket/templates/basket/plant_info.html
+++ b/basket/templates/basket/plant_info.html
@@ -1,2 +1,3 @@
+<!-- Template code provided by Code Institute -->
 <p class="my-0"><strong>{{ item.plant.common_name }}</strong></p>
 <p class="my-0 small">SKU: {{ item.plant.sku|upper }}</p>
