--- a/basket/templates/basket/quantity_form.html
+++ b/basket/templates/basket/quantity_form.html
@@ -1,3 +1,4 @@
+<!-- Template code provided by Code Institute -->
 <form class="form update-form" method="POST" action="{% url 'adjust_basket' item.item_id %}">
     {% csrf_token %}
     <div class="form-group">
