--- a/basket/templates/basket/plant_image.html
+++ b/basket/templates/basket/plant_image.html
@@ -1,3 +1,4 @@
+<!-- Template code provided by Code Institute -->
 {% if item.plant.image %}
     <img class="img-fluid rounded" src="{{ item.plant.image.url }}" alt="{{ item.plant.name }}">
 {% else %}
