--- a/plants/templates/plants/custom_widget_templates/custom_clearable_file_input.html
+++ b/plants/templates/plants/custom_widget_templates/custom_clearable_file_input.html
@@ -1,3 +1,4 @@
+<!-- Template code provided by Code Institute -->
 {% if widget.is_initial %}
     <p>{{ widget.initial_text }}:</p>
     <a href="{{ widget.value.url }}">
