--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -51,7 +51,7 @@
                             </p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="small mb-0">{{ item.quantity }} @ ${{ item.plant.price }} each</p>
+                            <p class="small mb-0">{{ item.quantity }} @ €{{ item.plant.price }} each</p>
                         </div>
                     </div>
                     {% endfor %}
