FEAT: Update coming soon section of index.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -64,10 +64,14 @@
                 Revisit soon when you'll have the opportunity to sponsor a cubic meter of blanket bog. 
                 Blanket bog is currently being cut and used as fuel. By sponsoring the purchase of blanket 
                 bog you are contributing to the reflooding and restoration of the bog. 
-
+            </p>
+            <p class="text-content">
                 A cubic meter of blanket bog can release up to 385kg of CO2! By paying to preserve bog 
                 that would otherwise release carbon you could carbon offset your life by sponsoring 
-                just 37 meters squared of 2 meter deep blanket bog for €100!                
+                just 37 meters squared of 2 meter deep blanket bog for €100!
+            </p>
+            <p class="text-content">    
+                Sign up for our newsletter below to receive more information about this service as it becomes available.
             </p>
         </div>
     </div>
