STYLE: Update link colours when in focus

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -242,7 +242,9 @@ a,
 }
 
 .link:hover,
-.nav-link:hover {
+.nav-link:hover,
+.link:focus,
+.nav-link:focus {
     color: var(--main-font-colour);
     text-decoration: underline;
 }
