--- a/plants/templates/plants/list_plants.html
+++ b/plants/templates/plants/list_plants.html
@@ -19,7 +19,7 @@
                     <div class="input-group">
                         <input class="form-control search-input" type="text" name="q" placeholder="Search our site">
                         <div class="input-group-append">
-                            <button class="form-control button search-button" type="submit">
+                            <button class="form-control button search-button" type="submit" aria-label="Search">
                                 <span class="icon">
                                     <i class="fas fa-search"></i>
                                 </span>
