FEAT: Add meta description to accounts pages

--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -2,6 +2,10 @@
 
 {% block main_style %}main-container-offset{% endblock %}
 
+{% block description %}
+    <meta name="description" content="Accounts page">
+{% endblock %}
+
 {% block content %}
 <div class="content-container allauth-content">
     <div class="inner-content-container allauth-inner-content">
