--- a/basket/templates/basket/quantity_form.html
+++ b/basket/templates/basket/quantity_form.html
@@ -4,16 +4,16 @@
     <div class="form-group">
         <div class="input-group input-group-{{ item.item_id }}">
             <div class="input-group-prepend">
-                <button class="decrement-qty quantity-button quantity-button-left decrement-qty_{{ item.item_id }}" data-item_id="{{ item.item_id }}" data-size="{{ item.size }}">
+                <button class="decrement-qty quantity-button quantity-button-left decrement-qty_{{ item.item_id }}" aria-label="decrement quanitity" data-item_id="{{ item.item_id }}" data-size="{{ item.size }}">
                     <span>
                         <i class="fas fa-minus fa-sm"></i>
                     </span>
                 </button>
             </div>
-            <input class="form-control quantity-input qty_input id_qty_{{ item.item_id }}" type="number" name="quantity" value="{{ item.quantity }}" min="1" max="99"
+            <input class="form-control quantity-input qty_input id_qty_{{ item.item_id }}" aria-label="quanitity" type="number" name="quantity" value="{{ item.quantity }}" min="1" max="99"
                 data-item_id="{{ item.item_id }}">
             <div class="input-group-append">
-                <button class="increment-qty button quantity-button increment-qty_{{ item.item_id }}" data-item_id="{{ item.item_id }}">
+                <button class="increment-qty button quantity-button increment-qty_{{ item.item_id }}" aria-label="increment quanitity" data-item_id="{{ item.item_id }}">
                     <span>
                         <i class="fas fa-plus fa-sm"></i>
                     </span>
