FIX: Add semicolon after character reference

--- a/locations/templates/locations/carbon_capture.html
+++ b/locations/templates/locations/carbon_capture.html
@@ -80,7 +80,7 @@
                                     <span class="plant-field">Species: </span><span class="plant-field-data">{{ plant.species }}</span>
                                 </div>
                                 <div>
-                                    <span class="plant-field">Price: </span><span class="plant-field-data">&#8364 {{ plant.price | calc_vat | floatformat:2 }} inc VAT</span>
+                                    <span class="plant-field">Price: </span><span class="plant-field-data">&#8364; {{ plant.price | calc_vat | floatformat:2 }} inc VAT</span>
                                 </div>
                                 <div>
                                     <span class="plant-field">SKU: </span><span class="plant-field-data">{{ plant.sku }}</span>
