FIX: Remove extra p html tag and add div tag

--- a/plants/templates/plants/plant_detail.html
+++ b/plants/templates/plants/plant_detail.html
@@ -32,7 +32,7 @@
                     <span class="plant-field">Description: </span><span class="plant-field-data">{{ plant.description }}</span>
                 </div>
                 <div>
-                    <span class="plant-field">Price: </span><span class="plant-field-data">&#8364 {{ plant.price | calc_vat | floatformat:2 }} inc VAT</span>
+                    <span class="plant-field">Price: </span><span class="plant-field-data">&#8364; {{ plant.price | calc_vat | floatformat:2 }} inc VAT</span>
                 </div>
                 <div>
                     <span class="plant-field">SKU: </span><span class="plant-field-data">{{ plant.sku }}</span>
